--- a/shrinking navbar on scrolldown/navbar-shrink-on-scroll.css
+++ b/shrinking navbar on scrolldown/navbar-shrink-on-scroll.css
@@ -1,70 +1,51 @@
 /* NAVBAR Styling */
 
-a[href]:not([class]) {
-    text-decoration: none;
-    transition: all ease-in-out .3s;
-}
 
-a[href]:not([class]):hover {
-    color: #222222;
-    -webkit-box-shadow: inset 0px 0px 5px 0px rgba(0,0,0,0.92);
-    -moz-box-shadow: inset 0px 0px 5px 0px rgba(0,0,0,0.92);
-    box-shadow: inset 0px 0px 5px 0px rgba(0,0,0,0.92);
-}
-
-
-.navbar-custom {
+.navbar-shrink {
     transition: all ease-in-out .3s;
     height: 100px;
-    background: #843534;
-    -webkit-box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.71);
-    -moz-box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.71);
-    box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.71);
 }
 
-.navbar-custom .navbar-brand,
-.navbar-custom .navbar-nav {
+.navbar-shrink .navbar-brand,
+.navbar-shrink .navbar-nav {
     transition: all ease-in-out .3s;
     line-height: 60px;
- }
+}
 
-.navbar-custom .navbar-brand
+.navbar-shrink .navbar-brand
 {
     padding: 18px;
     margin-right: 40px;
-    color: #fff;
     font-size: 32px;
-    text-shadow: 1px 1px 1px black;
 }
 
-.navbar-nav > li > a {
+.navbar-shrink .navbar-nav > li > a {
     font-size: 24px;
     padding: 20px 10px;
     line-height: 60px;
-    color: #fff;
 }
 
 /* CSS to set fixed style for navbar when in narrow state */
 
 @media (max-width: 992px) {
-    .navbar-custom {
+    .navbar-shrink {
         height: 50px;
     }
 
-    .navbar-custom .navbar-brand,
-    .navbar-custom .navbar-nav {
+    .navbar-shrink .navbar-brand,
+    .navbar-shrink .navbar-nav {
         height: 50px;
         line-height: 20px;
     }
 
-    .navbar-custom .navbar-brand
+    .navbar-shrink .navbar-brand
     {
         padding: 14px;
         margin-right: 20px;
         font-size: 24px;
     }
 
-    .navbar-nav > li > a {
+    .navbar-shrink .navbar-nav > li > a {
         font-size: 16px;
         padding: 10px;
         line-height: 30px;
